--- a/2021-03-23-tipsrundan-31.md
+++ b/2021-03-23-tipsrundan-31.md
@@ -51,7 +51,7 @@ Anyhow, here's the full workshop in a ready-to-run in the cloud Jupyter Notebook
 
 Have you heard of _tinyprojects.dev_? No? Then it's time you where introduced to this highly creative dev!    
 A few days ago the latest project was announced where the dev bought 300 emoji domain names from Kazakhstan and built an email service! The post feels really on point, short but fun & interesting.   
-<sub><sup>P.S. I can hear developers out there who thought they had it all covered in their validation service of emails, the anguish and pain that comes out of finding out someone was as "stupid" as to do this 😄</sub></sup>
+<sub><sup>P.S. I can hear developers out there who thought they had it all covered in their validation service of emails, the anguish and pain that comes out of finding out someone was as "stupid" as to do this 😄</sup></sub>
 
 [tinyprojects.dev↗](https://tinyprojects.dev/projects/mailoji)
 
